Fixed spacing with video resources carousel

--- a/AdvancedDuctCleaningLLC/src/app/video-resources/video-resources-carousel/video-resources-carousel.component.scss
+++ b/AdvancedDuctCleaningLLC/src/app/video-resources/video-resources-carousel/video-resources-carousel.component.scss
@@ -1,6 +1,6 @@
 @import '../../../variables';
 
-.carouselContainer {
+.carousel {
   width: 100%;
   height: 113px;
   position: relative;
